# self-reflective-rag-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: main.py  rag_graph.py
